ligolang/src/test/contracts/negative/parametric_types3.mligo
type ('a,'b,'c) foo = 'a * 'b * 'c
type bar = int foo